# tiny_chat

./: LICENSE  MANIFEST.in  README.md  app.py  chat_manager.py  config_manager.py  copy_botton.py  desktop.py  file_processor.py  logger.py  pyproject.toml  requirements.txt  sidebar.py  wait_view.py
evaluate/: README.md  eval_ja_gov_fags22k.py
tests/: conftest.py
tests/e2e/: test_app.py
tests/unit/: test_chat_manager.py
tiny_chat/: __init__.py  app.py  bm25_text_embedding.py  bm42_text_embedding.py  chat_config.py  chat_config_manager.py  chat_manager.py  config_manager.py  copy_botton.py  database.py  database_settings.py  delete_component.py  file_processor.py  llm_utils.py  main.py  qdrant_manager.py  rag_strategy.py  registration_component.py  search_component.py  search_componet.py  sidebar.py  static_emb_ja.py  static_embedding.py
tiny_chat/api/: api_util.py  compat_openai.py  continue_context_provider.py  rest.py
tiny_chat/chat/: app.py  chat_config.py  chat_manager.py  copy_botton.py  sidebar.py
tiny_chat/database/: database.py  database_config.py
tiny_chat/database/components/: deletion.py  manage.py  registration.py  search.py  settings.py
tiny_chat/database/embeddings/: bm25_embedding.py  bm42_embedding.py  splade_embedding.py  static_embedding.py  stransformer_cross_encoder.py  stransformer_embedding.py  text_chunk.py
tiny_chat/database/qdrant/: collection.py  qdrant_manager.py  query_preprocessor.py  rag_strategy.py
tiny_chat/mcp/: __main__.py  search_mcp.py  search_mcp_client.py
tiny_chat/utils/: file_processor.py  llm_utils.py  logger.py  query_preprocessor.py  streamlit_utils.py  web_search_processor.py
