[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-chat"
version = "0.1.1"
description = "A simple chat application"
authors = [
    { name = "Toshihiko Aoki" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pypdf",
    "openpyxl",
    "python-docx", 
    "python-pptx",
    "beautifulsoup4",
    "openai",
    "streamlit>=v1.43.2",
    "fugashi",
    "unidic-lite",
    "qdrant-client==1.13.3",
    "fastembed==0.6.0",
    "sudachidict_core",
    "sudachipy",
    "stopwordsiso",
    "torch",
    "sentence-transformers",
    "mcp",
    "sentencepiece==0.2.0",
    "fastapi",
]

[project.urls]
Repository = "https://github.com/to-aoki/tiny_chat"

[project.scripts]
tiny-chat = "tiny_chat:main"
tiny-chat-mcp = "tiny_chat.mcp.search_mcp:main"
tiny-chat-api = "tiny_chat.api.compat_openai:main"
tiny-chat-continue = "tiny_chat.api.continue_context_provider:main"

[tool.hatch.build]
exclude = [".git", ".env", ".venv", "venv", "__pycache__"]


[tool.hatch.build.targets.wheel]
packages = ["tiny_chat"]
